--- a/style.css
+++ b/style.css
@@ -131,12 +131,18 @@ main {
   box-shadow: 0px 1.875rem 1.25rem 1.25rem #0c1729;
 }
 
+.nft-cube {
+  background-color: var(--clr-primary-Cyan);
+  border-radius: 0.5rem;
+}
+
 .nft-cube img {
   border-radius: 0.375rem;
 }
 
 .nft-cube img:hover {
   cursor: pointer;
+  opacity: 0.75;
 }
 
 h2 {
@@ -186,6 +192,8 @@ hr {
 .profile img {
   width: 2.0625rem;
   height: 2.0625rem;
+  border: 2px solid white;
+  border-radius: 100%;
 }
 
 .profile a {
