--- a/style.css
+++ b/style.css
@@ -132,17 +132,18 @@ main {
 }
 
 .nft-cube {
+  background: url(images/icon-view.svg) no-repeat center;
   background-color: var(--clr-primary-Cyan);
-  border-radius: 0.5rem;
+  border-radius: 8px;
 }
 
 .nft-cube img {
-  border-radius: 0.375rem;
+  border-radius: 6px;
 }
 
 .nft-cube img:hover {
   cursor: pointer;
-  opacity: 0.75;
+  opacity: 0.5;
 }
 
 h2 {
